force-app/main/default/objects/TTS_TrademarkIPAssociation__c/TTS_TrademarkIPAssociation__c.object-meta.xml
<CustomObject>
    <description>The Trademark Class Association object links a trademark Protection record to a NICE Trademark Class. Each association identifies one class applied to one protection. Commonly used to record the goods and services classifications covered by a trademark.</description>
    <label>Trademark Class Association</label>
    <nameField>
        <displayFormat>TM-{0000}</displayFormat>
        <label>Trademark Class ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trademark Class Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>