force-app/main/default/objects/TTS_TrademarkIPAssociation__c/fields/Protection__c.field-meta.xml
<CustomField>
    <fullName>Protection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the association to the related Protection record, with the lookup filtered for trademarks.</description>
    <inlineHelpText>Select the trademark protection to associate with this NICE Trademark Class.</inlineHelpText>
    <label>Protection</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TTS_Protection__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Trademark</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>TTS_Protection__c</referenceTo>
    <relationshipLabel>Trademark Class Associations</relationshipLabel>
    <relationshipName>Trademark_Class_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>