force-app/main/default/objects/TTS_TrademarkIPAssociation__c/fields/Trademark_Class__c.field-meta.xml
<CustomField>
    <fullName>Trademark_Class__c</fullName>
    <label>Trademark Class</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>TrademarkClassAssociations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>