force-app/main/default/objects/TTS_TrademarkIPAssociation__c/fields/Trademark_Classes__c.field-meta.xml
<CustomField>
    <fullName>Trademark_Classes__c</fullName>
    <description>Links the association to its parent NICE Trademark Class record.</description>
    <inlineHelpText>Select the NICE Trademark Class covered by the related trademark protection.</inlineHelpText>
    <label>Trademark Classes</label>
    <referenceTo>TTS_Trademark_Classes__c</referenceTo>
    <relationshipName>TrademarkClassAssociations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>